--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,15 +38,20 @@
     "Freiling",
     "Morten",
     "Sjøgren",
+    "assistive",
     "bootstrapper",
     "ddfreiling",
+    "downlevel",
     "fontscale",
     "fontscales",
     "globalevents",
     "gmail",
     "mabs",
+    "prettierrc",
     "radiobutton",
     "sasswatch",
+    "selectable",
+    "toplevel",
     "tscwatch"
   ]
 }
