--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -22,7 +22,8 @@
         "noFallthroughCasesInSwitch": true,
         "baseUrl": ".",
         "skipLibCheck": true,
-        "downlevelIteration": true
+        "downlevelIteration": true,
+        "incremental": true
     },
     "files": [
         "index.ts"
