--- a/src/package.json
+++ b/src/package.json
@@ -28,8 +28,8 @@
     "plugin.tscwatch": "npm run tsc -- -w",
     "plugin.sasswatch": "npm run scss && npm run scss -- --watch",
     "plugin.watch": "npm-run-all --parallel plugin.tscwatch plugin.sasswatch",
-    "demo.android.start": "cd ../demo && tns debug android --syncAllFiles",
-    "demo.ios.start": "cd ../demo && tns debug ios --syncAllFiles",
+    "demo.android.start": "cd ../demo && tns debug android --syncAllFiles --bundle",
+    "demo.ios.start": "cd ../demo && tns debug ios --syncAllFiles --bundle",
     "demo.ios": "npm i && npm-run-all tsc --parallel plugin.watch demo.ios.start",
     "demo.android": "npm i && npm-run-all tsc --parallel plugin.watch demo.android.start",
     "demo.reset": "cd ../demo && rimraf platforms",
