--- a/demo/package.json
+++ b/demo/package.json
@@ -1,45 +1,47 @@
 {
   "name": "a11y-demo",
+  "description": "NativeScript Application",
   "license": "SEE LICENSE IN <your-license-filename>",
   "version": "0.0.0",
   "nativescript": {
     "id": "dk.nota.a11ydemo",
+    "tns-ios": {
+      "version": "5.3.1"
+    },
     "tns-android": {
-      "version": "5.3.0"
+      "version": "5.3.1"
     }
   },
   "scripts": {
     "postinstall": "./patches/apply-patches.sh"
   },
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/http": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/animations": "~7.2.14",
+    "@angular/common": "~7.2.14",
+    "@angular/compiler": "~7.2.14",
+    "@angular/core": "~7.2.14",
+    "@angular/forms": "~7.2.14",
+    "@angular/http": "~7.2.14",
+    "@angular/platform-browser": "~7.2.14",
+    "@angular/platform-browser-dynamic": "~7.2.14",
+    "@angular/router": "~7.2.14",
     "@nota/nativescript-accessibility-ext": "file:../src",
     "nativescript-angular": "~7.2.3",
     "nativescript-theme-core": "~1.0.4",
-    "reflect-metadata": "~0.1.12",
+    "reflect-metadata": "~0.1.13",
     "rxjs": "~6.4.0",
-    "tns-core-modules": "~5.3.0",
-    "zone.js": "^0.8.26"
+    "tns-core-modules": "~5.3.1",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/core": "~7.2.0",
-    "@angular/cli": "^7.2.0",
-    "@angular/compiler-cli": "~7.2.0",
-    "@nativescript/schematics": "~0.4.0",
+    "@angular/cli": "7.3.8",
+    "@angular/compiler-cli": "~7.2.10",
+    "@nativescript/schematics": "~0.5.2",
     "@ngtools/webpack": "~7.2.0",
-    "ajv": "~6.9.2",
     "nativescript-dev-sass": "~1.7.0",
     "nativescript-dev-typescript": "~0.9.0",
-    "nativescript-dev-webpack": "^0.20.3",
-    "tns-platform-declarations": "~5.3.0",
+    "nativescript-dev-webpack": "^0.21.2",
+    "tns-platform-declarations": "~5.3.1",
     "typescript": "~3.1.6"
   }
 }
