--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -14,6 +14,9 @@
         ],
         "baseUrl": ".",
         "paths": {
+            "@nota/nativescript-accessibility-ext/*": [
+                "../src/*"
+            ],
             "*": [
                 "./node_modules/tns-core-modules/*",
                 "./node_modules/*"
