--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -22,8 +22,7 @@
         "noFallthroughCasesInSwitch": true,
         "baseUrl": ".",
         "skipLibCheck": true,
-        "downlevelIteration": true,
-        "incremental": true
+        "downlevelIteration": true
     },
     "files": [
         "index.ts"
