--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,7 +7,7 @@
         "noLib": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "lib": ["es6", "dom", "es2015.iterable"],
+        "lib": ["es6", "dom", "es2015.iterable", "es2017.object"],
         "pretty": true,
         "allowUnreachableCode": false,
         "allowUnusedLabels": false,
