--- a/demo/package.json
+++ b/demo/package.json
@@ -1,14 +1,15 @@
 {
   "private": true,
   "name": "a11y-demo",
+  "description": "NativeScript Application",
   "license": "SEE LICENSE IN <your-license-filename>",
   "version": "0.0.0",
   "nativescript": {
     "id": "dk.nota.a11ydemo",
-    "tns-android": {
+    "tns-ios": {
       "version": "5.3.1"
     },
-    "tns-ios": {
+    "tns-android": {
       "version": "5.3.1"
     }
   },
@@ -16,30 +17,28 @@
     "postinstall": "./patches/apply-patches.sh"
   },
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/http": "~7.2.0",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "@nota/nativescript-accessibility-ext": "../src",
+    "@angular/animations": "~7.2.14",
+    "@angular/common": "~7.2.14",
+    "@angular/compiler": "~7.2.14",
+    "@angular/core": "~7.2.14",
+    "@angular/forms": "~7.2.14",
+    "@angular/http": "~7.2.14",
+    "@angular/platform-browser": "~7.2.14",
+    "@angular/platform-browser-dynamic": "~7.2.14",
+    "@angular/router": "~7.2.14",
+    "@nota/nativescript-accessibility-ext": "file:../src",
     "nativescript-angular": "~7.2.3",
     "nativescript-theme-core": "~1.0.4",
-    "reflect-metadata": "~0.1.12",
+    "reflect-metadata": "~0.1.13",
     "rxjs": "~6.4.0",
-    "tns-core-modules": "~5.3.0",
-    "zone.js": "^0.8.26"
+    "tns-core-modules": "~5.3.1",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/core": "~7.2.0",
-    "@angular/cli": "^7.2.0",
-    "@angular/compiler-cli": "~7.2.0",
-    "@nativescript/schematics": "~0.4.0",
+    "@angular/cli": "7.3.8",
+    "@angular/compiler-cli": "~7.2.10",
+    "@nativescript/schematics": "~0.5.2",
     "@ngtools/webpack": "~7.2.0",
-    "ajv": "~6.9.2",
     "nativescript-dev-sass": "~1.7.0",
     "nativescript-dev-typescript": "~0.9.0",
     "nativescript-dev-webpack": "^0.21.2",
