--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -14,8 +14,7 @@
         "noEmitHelpers": true,
         "noUnusedLocals": true,
         "noEmitOnError": false,
-        "inlineSourceMap": true,
-        "inlineSources": true,
+        "sourceMap": true,
         "noImplicitAny": false,
         "noImplicitReturns": true,
         "noImplicitUseStrict": false,
