fix(angular): a11y-fontscale-* classes were lost on angular updates

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -21,7 +21,8 @@
         "noFallthroughCasesInSwitch": true,
         "baseUrl": ".",
         "skipLibCheck": true,
-        "downlevelIteration": true
+        "downlevelIteration": true,
+        "incremental": true
     },
     "files": [
         "index.ts"
