--- a/src/package.json
+++ b/src/package.json
@@ -17,7 +17,7 @@
     }
   },
   "scripts": {
-    "build": "npm ci && npm-run-all lint build:tsc build:scss",
+    "build": "npm-run-all ngc build:tsc build:scss",
     "build:scss": "node-sass --recursive --source-map true --source-map-contents --output css scss",
     "build:tsc": "tsc -skipLibCheck",
     "ci.build": "npm ci && npm-run-all build:tsc build:scss",
@@ -28,6 +28,7 @@
     "format": "prettier --write --config $(git rev-parse --show-toplevel)/.prettierrc.json '**/*.ts' '../demo/app/**/*.ts' '../demo/app/**/*.ts'",
     "format:check": "prettier-check --config $(git rev-parse --show-toplevel)/.prettierrc.json '**/*.ts' '../demo/app/**/*.ts' '../demo/app/**/*.ts'",
     "lint": "npm-run-all tslint format:check",
+    "ngc": "ngc --project tsconfig.aot.json",
     "tslint": "tslint '**/*.ts' '../demo/app/**/*.ts' '../demo/app/**/*.ts' --config $(git rev-parse --show-toplevel)/tslint.json --exclude \"**/node_modules/**\"",
     "tslint:fix": "npm run tslint -- --fix"
   },
@@ -47,7 +48,8 @@
   ],
   "author": {
     "name": "Nota",
-    "email": "app@nota.dk"
+    "email": "app@nota.dk",
+    "url": "https://nota.dk"
   },
   "contributors": [
     {
@@ -60,19 +62,30 @@
       "email": "ddfreiling@gmail.com"
     }
   ],
-  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/Notalib/nativescript-accessibility-ext/issues"
   },
+  "license": "Apache-2.0",
   "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
   "readmeFilename": "README.md",
   "devDependencies": {
+    "@angular/common": "8.0.0",
+    "@angular/compiler": "8.0.0",
+    "@angular/compiler-cli": "8.0.0",
+    "@angular/core": "8.0.0",
+    "@angular/forms": "8.0.0",
+    "@angular/http": "8.0.0-beta.10",
+    "@angular/platform-browser": "8.0.0",
+    "@angular/platform-browser-dynamic": "8.0.0",
+    "@angular/router": "8.0.0",
+    "nativescript-angular": "~8.0.1",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "prettier-check": "^2.0.0",
     "rimraf": "^2.6.3",
-    "tns-core-modules": "~5.4.3",
+    "rxjs": "^6.5.2",
+    "tns-core-modules": "^5.4.3",
     "tslint": "^5.16.0",
     "tslint-no-circular-imports": "^0.7.0",
     "typescript": "~3.4.5"
