--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "private": true,
   "name": "@nota/nativescript-accessibility-ext",
-  "version": "5.4.0",
+  "version": "5.4.0-alpha.4",
   "description": "Add support for 'VoiceOver' and 'TalkBack' in NativeScript",
   "scripts": {
-    "postinstall": "npm run install:demo",
+    "postinstall": "npm-run-all install:src install:demo",
     "demo:android": "npm run install:demo && cd demo && tns debug android --bundle",
     "demo:ios": "npm run install:demo && cd demo && tns debug ios --bundle",
+    "install:src": "cd src && npm i",
     "install:demo": "npm run build && cd demo && npm i",
     "sass": "cd src && rm -rf css && node-sass --recursive --output css scss",
     "build": "npm-run-all tsc sass",
