--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,7 @@
 {
+  "private": true,
   "name": "@nota/nativescript-accessibility-ext",
-  "version": "5.4.0-alpha.3",
+  "version": "5.4.0-alpha.4",
   "description": "Add support for 'VoiceOver' and 'TalkBack' in NativeScript",
   "main": "index.js",
   "typings": "index.d.ts",
