--- a/src/package.json
+++ b/src/package.json
@@ -22,15 +22,15 @@
     "build:scss": "node-sass --recursive --source-map true --source-map-contents --output css scss",
     "build:tsc": "tsc -skipLibCheck",
     "ci.build": "npm ci && npm-run-all build:tsc build:scss",
-    "ci.lint": "npm i && npm run lint",
+    "ci.lint": "npm ci && npm run lint",
     "clean": "npm-run-all clean.demo clean.src",
     "clean.demo": "git clean -d -x -f $(git rev-parse --show-toplevel)/demo",
     "clean.src": "git clean -d -x -f $(git rev-parse --show-toplevel)/src",
-    "format": "prettier --write --config $(git rev-parse --show-toplevel)/.prettierrc.json '**/*.{ts,html,scss}' '../demo/app/**/*.{ts,html,scss}' '../demo-ng/app/**/*.{ts,html,scss}'",
-    "format:check": "prettier-check --config $(git rev-parse --show-toplevel)/.prettierrc.json '**/*.{ts,html,scss}' '../demo/app/**/*.{ts,html,scss}' '../demo-ng/app/**/*.{ts,html,scss}'",
+    "format": "prettier --write --config \"$(git rev-parse --show-toplevel)/.prettierrc.json\" \"$(git rev-parse --show-toplevel)/{demo-ng/app,demo/app,src}/**/*.{ts,html,scss}\"",
+    "format:check": "prettier-check --config \"$(git rev-parse --show-toplevel)/.prettierrc.json\" \"$(git rev-parse --show-toplevel)/{demo-ng/app,demo/app,src}/**/*.{ts,html,scss}\"",
     "lint": "npm-run-all tslint format:check",
     "ngc": "ngc --project tsconfig.aot.json",
-    "tslint": "tslint '**/*.ts' '../demo/app/**/*.ts' '../demo/app/**/*.ts' --config $(git rev-parse --show-toplevel)/tslint.json --exclude \"**/node_modules/**\"",
+    "tslint": "tslint 'src/**/*.ts' \"$(git rev-parse --show-toplevel)/{demo-ng/app,demo/app,src}/**/*.ts\" --config $(git rev-parse --show-toplevel)/tslint.json --exclude \"**/node_modules/**\"",
     "tslint:fix": "npm run tslint -- --fix"
   },
   "repository": {
