--- a/demo/package.json
+++ b/demo/package.json
@@ -40,8 +40,9 @@
     "@nativescript/schematics": "~0.6.0",
     "@ngtools/webpack": "8.0.0",
     "nativescript-dev-sass": "^1.7.0",
-    "nativescript-dev-typescript": "~0.9.0",
+    "nativescript-dev-typescript": "~0.10.0",
     "nativescript-dev-webpack": "^0.24.1",
-    "typescript": "~3.4.5"
+    "typescript": "~3.4.5",
+    "webpack-bundle-analyzer": "~3.0.4"
   }
 }
