--- a/demo/package.json
+++ b/demo/package.json
@@ -7,14 +7,11 @@
   "nativescript": {
     "id": "dk.nota.a11ydemo",
     "tns-ios": {
-      "version": "5.4.2"
+      "version": "6.0.0-rc-2019-06-28-105002-01"
     },
     "tns-android": {
-      "version": "5.4.0"
+      "version": "6.0.0-rc-2019-06-27-172817-03"
     }
-  },
-  "scripts": {
-    "postinstall": "./patches/apply-patches.sh"
   },
   "dependencies": {
     "@angular/animations": "8.0.0",
@@ -31,7 +28,7 @@
     "nativescript-theme-core": "~1.0.6",
     "reflect-metadata": "~0.1.13",
     "rxjs": "^6.5.2",
-    "tns-core-modules": "^5.4.3",
+    "tns-core-modules": "6.0.0-rc-2019-06-28-175837-02",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
@@ -39,10 +36,9 @@
     "@angular/compiler-cli": "8.0.0",
     "@nativescript/schematics": "~0.6.0",
     "@ngtools/webpack": "8.0.0",
-    "nativescript-dev-sass": "^1.7.0",
-    "nativescript-dev-typescript": "~0.10.0",
-    "nativescript-dev-webpack": "^0.24.1",
-    "typescript": "~3.4.5",
-    "webpack-bundle-analyzer": "~3.0.4"
+    "nativescript-dev-webpack": "1.0.0-rc-2019-07-02-161545-02",
+    "typescript": "3.4.1",
+    "webpack-bundle-analyzer": "~3.0.4",
+    "node-sass": "4.12.0"
   }
 }
