--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
   "devDependencies": {
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
-    "tns-core-modules": "^5.4.3",
-    "tns-platform-declarations": "^5.4.3",
+    "tns-core-modules": "rc",
+    "tns-platform-declarations": "rc",
     "typescript": "~3.4.5"
   }
 }
