feat: start adding customer css-properties for a11y

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ src/*.d.ts
 tsconfig.tsbuildinfo
 **/*.metadata.json
 .migration_backup/
+
+src/ui/core/view.android.d.ts
+src/ui/core/view.ios.d.ts
