feat: generalize accessibilityComponentType and add new accessibilityState

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,7 @@
   "cSpell.words": [
     "Bitmask",
     "Codegen",
+    "Combobox",
     "Flexbox",
     "Focusable",
     "Freiling",
@@ -55,6 +56,7 @@
     "fontscales",
     "globalevents",
     "gmail",
+    "inputmethodservice",
     "mabs",
     "moduleid",
     "nativescript",
