--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Add support for 'VoiceOver' and 'TalkBack' in NativeScript",
   "scripts": {
     "postinstall": "npm-run-all install:src install:demo",
-    "demo:android": "npm run install:demo && cd demo && tns debug android --bundle",
-    "demo:ios": "npm run install:demo && cd demo && tns debug ios --bundle",
+    "demo:android": "npm run install:demo && (cd demo && npx tns debug android --bundle)",
+    "demo:ios": "npm run install:demo && (cd demo && npx tns debug ios --bundle)",
     "install:src": "cd src && npm i",
     "install:demo": "npm run build && cd demo && npm i",
     "sass": "cd src && rm -rf css && node-sass --recursive --output css scss",
@@ -46,8 +46,8 @@
   "devDependencies": {
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
-    "tns-core-modules": "rc",
-    "tns-platform-declarations": "rc",
+    "tns-core-modules": "~6.0.0",
+    "tns-platform-declarations": "~6.0.0",
     "typescript": "~3.4.5"
   }
 }
