--- a/demo/package.json
+++ b/demo/package.json
@@ -36,10 +36,9 @@
     "@angular/compiler-cli": "8.0.0",
     "@nativescript/schematics": "~0.6.0",
     "@ngtools/webpack": "8.0.0",
-    "nativescript": "^6.0.0-2019-07-15-122841-13639",
+    "nativescript": "^6.0.0-2019-07-15-150533-13643",
     "nativescript-dev-webpack": "1.0.0",
     "node-sass": "4.12.0",
-    "typescript": "^3.4.5",
-    "webpack-bundle-analyzer": "~3.0.4"
+    "typescript": "^3.4.5"
   }
 }
