--- a/demo/package.json
+++ b/demo/package.json
@@ -28,14 +28,15 @@
     "nativescript-theme-core": "~1.0.6",
     "reflect-metadata": "~0.1.13",
     "rxjs": "^6.5.2",
-    "tns-core-modules": "6.0.1",
-    "zone.js": "^0.9.1"
+    "tns-core-modules": "^6.0.2",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "7.3.9",
+    "@angular/cli": "8.1.2",
     "@angular/compiler-cli": "8.0.0",
     "@nativescript/schematics": "~0.6.0",
     "@ngtools/webpack": "8.0.0",
+    "codelyzer": "^5.0.1",
     "nativescript-dev-webpack": "1.0.1",
     "node-sass": "4.12.0",
     "typescript": "~3.4.5"
