--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@nota/nativescript-accessibility-ext",
-  "version": "6.0.0-alpha.1",
+  "version": "6.0.0-alpha.2",
   "description": "Add support for 'VoiceOver' and 'TalkBack' in NativeScript",
   "scripts": {
     "postinstall": "npm-run-all install:src install:demo",
@@ -46,8 +46,8 @@
   "devDependencies": {
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
-    "tns-core-modules": "~6.0.0",
-    "tns-platform-declarations": "~6.0.0",
+    "tns-core-modules": "^6.0.2",
+    "tns-platform-declarations": "^6.0.2",
     "typescript": "~3.4.5"
   }
 }
