--- a/src/package.json
+++ b/src/package.json
@@ -7,8 +7,8 @@
   "typings": "index.d.ts",
   "nativescript": {
     "platforms": {
-      "android": "5.4.0",
-      "ios": "5.4.0"
+      "android": "6.0.0",
+      "ios": "6.0.0"
     },
     "plugin": {
       "nan": true,
@@ -79,14 +79,14 @@
     "@angular/platform-browser": "8.0.0",
     "@angular/platform-browser-dynamic": "8.0.0",
     "@angular/router": "8.0.0",
-    "nativescript-angular": "~8.0.1",
+    "nativescript-angular": "~8.0.2",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "prettier-check": "^2.0.0",
     "rimraf": "^2.6.3",
     "rxjs": "^6.5.2",
-    "tns-core-modules": "~6.0.0",
+    "tns-core-modules": "^6.0.2",
     "tslint": "^5.18.0",
     "tslint-no-circular-imports": "^0.7.0",
     "typescript": "~3.4.5",
