update to theme 2.0

--- a/src/package.json
+++ b/src/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "build": "npm-run-all ngc build:tsc build:scss",
-    "build:scss": "node-sass --recursive --source-map true --source-map-contents --output css scss",
+    "build:scss": "rimraf css && mkdir css && dart-sass --load-path node_modules --source-map scss/a11y-helpers.scss:css/a11y-helpers.css scss/a11y.android.scss:css/a11y.android.css scss/a11y.ios.scss:css/a11y.ios.css css",
     "build:tsc": "tsc -skipLibCheck",
     "ci.build": "npm ci && npm-run-all build:tsc build:scss",
     "ci.lint": "npm ci && npm run lint",
@@ -79,8 +79,9 @@
     "@angular/platform-browser": "8.0.0",
     "@angular/platform-browser-dynamic": "8.0.0",
     "@angular/router": "8.0.0",
+    "dart-sass": "^1.22.7",
     "nativescript-angular": "~8.0.2",
-    "node-sass": "^4.12.0",
+    "nativescript-theme-core": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "prettier-check": "^2.0.0",
