--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "demo:ios": "npm run install:demo && (cd demo && npx tns debug ios --bundle)",
     "install:src": "cd src && npm i",
     "install:demo": "npm run build && cd demo && npm i",
-    "sass": "cd src && rm -rf css && node-sass --recursive --output css scss",
+    "sass": "cd src && npm run build:scss",
     "build": "npm-run-all tsc sass",
     "tsc": "cd src && tsc",
     "tsc-w": "cd src && tsc -w"
@@ -44,7 +44,6 @@
   },
   "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
   "devDependencies": {
-    "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "tns-core-modules": "^6.0.2",
     "tns-platform-declarations": "^6.0.2",
