--- a/demo/package.json
+++ b/demo/package.json
@@ -43,6 +43,6 @@
     "nativescript-dev-typescript": "~0.10.0",
     "nativescript-dev-webpack": "^0.24.1",
     "typescript": "~3.4.5",
-    "webpack-bundle-analyzer": "~3.0.4"
+    "webpack-bundle-analyzer": "^3.4.1"
   }
 }
