chore: use new css-variables and css-calc for the a11y-theme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,11 +43,13 @@
     "Newable",
     "Recycler",
     "Sjøgren",
+    "Unscoped",
     "androidx",
     "armeabi",
     "assistive",
     "ayfs",
     "bootstrapper",
+    "codelyzer",
     "ddfreiling",
     "devkit",
     "devtool",
