--- a/demo/package.json
+++ b/demo/package.json
@@ -14,31 +14,32 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "8.0.0",
-    "@angular/common": "8.0.0",
-    "@angular/compiler": "8.0.0",
-    "@angular/core": "8.0.0",
-    "@angular/forms": "8.0.0",
-    "@angular/http": "8.0.0-beta.10",
-    "@angular/platform-browser": "8.0.0",
-    "@angular/platform-browser-dynamic": "8.0.0",
-    "@angular/router": "8.0.0",
+    "@angular/animations": "8.2.0",
+    "@angular/common": "8.2.0",
+    "@angular/compiler": "8.2.0",
+    "@angular/core": "8.2.0",
+    "@angular/forms": "8.2.0",
+    "@angular/platform-browser": "8.2.0",
+    "@angular/platform-browser-dynamic": "8.2.0",
+    "@angular/router": "8.2.0",
     "@nota/nativescript-accessibility-ext": "file:../src",
-    "nativescript-angular": "^8.0.2",
-    "nativescript-theme-core": "~1.0.6",
+    "nativescript-angular": "^8.2.0",
+    "nativescript-theme-core": "~2.0.5",
     "reflect-metadata": "~0.1.13",
     "rxjs": "^6.5.2",
-    "tns-core-modules": "^6.0.2",
-    "zone.js": "~0.9.1"
+    "tns-core-modules": "next",
+    "zone.js": "~0.9.0"
   },
   "devDependencies": {
-    "@angular/cli": "8.1.2",
-    "@angular/compiler-cli": "8.0.0",
-    "@nativescript/schematics": "~0.6.0",
-    "@ngtools/webpack": "8.0.0",
-    "codelyzer": "^5.0.1",
-    "nativescript-dev-webpack": "1.0.1",
-    "node-sass": "4.12.0",
-    "typescript": "~3.4.5"
+    "@angular/cli": "8.2.2",
+    "@angular/compiler-cli": "8.2.0",
+    "@nativescript/schematics": "~0.7.1",
+    "@ngtools/webpack": "8.2.0",
+    "codelyzer": "^5.1.0",
+    "nativescript-dev-webpack": "^1.1.1",
+    "sass": "^1.22.10",
+    "sass-loader": "^7.3.1",
+    "tslint": "^5.19.0",
+    "typescript": "~3.5.0"
   }
 }
