--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@nota/nativescript-accessibility-ext",
-  "version": "6.0.0-alpha.2",
+  "version": "6.1.0-alpha.1",
   "description": "Add support for 'VoiceOver' and 'TalkBack' in NativeScript",
   "scripts": {
     "postinstall": "npm-run-all install:src install:demo",
@@ -45,8 +45,8 @@
   "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
-    "tns-core-modules": "^6.0.2",
+    "tns-core-modules": "next",
     "tns-platform-declarations": "^6.0.2",
-    "typescript": "~3.4.5"
+    "typescript": "~3.5.2"
   }
 }
