--- a/src/package.json
+++ b/src/package.json
@@ -1,14 +1,14 @@
 {
   "private": true,
   "name": "@nota/nativescript-accessibility-ext",
-  "version": "6.0.0-alpha.2",
+  "version": "6.1.0-alpha.1",
   "description": "Add support for 'VoiceOver' and 'TalkBack' in NativeScript",
   "main": "index.js",
   "typings": "index.d.ts",
   "nativescript": {
     "platforms": {
-      "android": "6.0.0",
-      "ios": "6.0.0"
+      "android": "6.1.0",
+      "ios": "6.1.0"
     },
     "plugin": {
       "nan": true,
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "build": "npm-run-all ngc build:tsc build:scss",
-    "build:scss": "rimraf css && mkdir css && dart-sass --style compressed --load-path node_modules --source-map scss/a11y-helpers.scss:css/a11y-helpers.css scss/a11y.android.scss:css/a11y.android.css scss/a11y.ios.scss:css/a11y.ios.css css",
+    "build:scss": "rimraf css && mkdir css && dart-sass --style compressed --load-path node_modules --source-map scss/a11y-helpers.scss:css/a11y-helpers.css scss/a11y.android.scss:css/a11y.android.css scss/a11y.ios.scss:css/a11y.ios.css scss/a11y.scss:css/a11y.css css",
     "build:tsc": "tsc -skipLibCheck",
     "ci.build": "npm ci && npm-run-all build:tsc build:scss",
     "ci.lint": "npm ci && npm run lint",
@@ -70,28 +70,27 @@
   "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "@angular/common": "8.0.0",
-    "@angular/compiler": "8.0.0",
-    "@angular/compiler-cli": "8.0.0",
-    "@angular/core": "8.0.0",
-    "@angular/forms": "8.0.0",
-    "@angular/http": "8.0.0-beta.10",
-    "@angular/platform-browser": "8.0.0",
-    "@angular/platform-browser-dynamic": "8.0.0",
-    "@angular/router": "8.0.0",
-    "dart-sass": "^1.22.7",
-    "nativescript-angular": "~8.0.2",
-    "nativescript-theme-core": "^2.0.2",
+    "@angular/common": "8.2.0",
+    "@angular/compiler": "8.2.0",
+    "@angular/compiler-cli": "8.2.0",
+    "@angular/core": "8.2.0",
+    "@angular/forms": "8.2.0",
+    "@angular/platform-browser": "8.2.0",
+    "@angular/platform-browser-dynamic": "8.2.0",
+    "@angular/router": "8.2.0",
+    "dart-sass": "^1.22.10",
+    "nativescript-angular": "^8.2.0",
+    "nativescript-theme-core": "^2.0.5",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "prettier-check": "^2.0.0",
-    "rimraf": "^2.6.3",
+    "rimraf": "^3.0.0",
     "rxjs": "^6.5.2",
-    "tns-core-modules": "^6.0.2",
-    "tslint": "^5.18.0",
+    "tns-core-modules": "next",
+    "tslint": "^5.19.0",
     "tslint-no-circular-imports": "^0.7.0",
-    "typescript": "~3.4.5",
-    "zone.js": "^0.9.1"
+    "typescript": "~3.5.3",
+    "zone.js": "~0.9.1"
   },
   "dependencies": {},
   "bootstrapper": "nativescript-plugin-seed"
