--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,15 +33,34 @@
     "**/node_modules/**/*": true
   },
   "cSpell.words": [
+    "Alcácer",
+    "Aleix",
+    "Arda",
     "Bitmask",
+    "Cillessen",
     "Codegen",
+    "Digne",
     "Flexbox",
     "Focusable",
     "Freiling",
+    "Gomes",
+    "Iniesta",
+    "Jordi",
+    "Mascherano",
+    "Masip",
+    "Mathieu",
+    "Messi",
     "Morten",
     "Newable",
+    "Neymar",
+    "Paco",
+    "Rafinha",
+    "Rakitic",
     "Recycler",
+    "Sergi",
     "Sjøgren",
+    "Stegen",
+    "Umtiti",
     "armeabi",
     "assistive",
     "ayfs",
