backport c-spell settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
     "Cillessen",
     "Codegen",
     "Digne",
+    "Combobox",
     "Flexbox",
     "Focusable",
     "Freiling",
@@ -61,10 +62,13 @@
     "Sjøgren",
     "Stegen",
     "Umtiti",
+    "Unscoped",
+    "androidx",
     "armeabi",
     "assistive",
     "ayfs",
     "bootstrapper",
+    "codelyzer",
     "ddfreiling",
     "devkit",
     "devtool",
@@ -73,6 +77,7 @@
     "fontscales",
     "globalevents",
     "gmail",
+    "inputmethodservice",
     "mabs",
     "moduleid",
     "nativescript",
@@ -87,6 +92,7 @@
     "prettierrc",
     "quotemark",
     "radiobutton",
+    "ruleset",
     "sasswatch",
     "selectable",
     "softnav",
