feat: update to theme 2.0.17+ and support compat

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,8 +39,8 @@
     "Bitmask",
     "Cillessen",
     "Codegen",
-    "Digne",
     "Combobox",
+    "Digne",
     "Flexbox",
     "Focusable",
     "Freiling",
@@ -69,6 +69,7 @@
     "ayfs",
     "bootstrapper",
     "codelyzer",
+    "compat",
     "ddfreiling",
     "devkit",
     "devtool",
@@ -95,6 +96,7 @@
     "ruleset",
     "sasswatch",
     "selectable",
+    "sidedrawer",
     "softnav",
     "toplevel",
     "tscwatch",
