--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
   "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
-    "tns-core-modules": "next",
-    "tns-platform-declarations": "^6.0.2",
-    "typescript": "~3.5.2"
+    "tns-core-modules": "^6.1.1",
+    "tns-platform-declarations": "^6.1.1",
+    "typescript": "~3.5.3"
   }
 }
