--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "tns-core-modules": "^6.1.1",
-    "tns-platform-declarations": "^6.1.1",
+    "tns-platform-declarations": "~6.1.1",
     "typescript": "~3.5.3"
   }
 }
