--- a/src/package.json
+++ b/src/package.json
@@ -70,24 +70,24 @@
   "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "@angular/common": "8.2.1",
-    "@angular/compiler": "8.2.1",
-    "@angular/compiler-cli": "8.2.1",
-    "@angular/core": "8.2.1",
-    "@angular/forms": "8.2.1",
-    "@angular/platform-browser": "8.2.1",
-    "@angular/platform-browser-dynamic": "8.2.1",
-    "@angular/router": "8.2.1",
-    "dart-sass": "^1.22.10",
-    "nativescript-angular": "^8.2.1",
-    "nativescript-theme-core": "^2.0.19",
+    "@angular/common": "~8.2.6",
+    "@angular/compiler": "~8.2.6",
+    "@angular/compiler-cli": "~8.2.6",
+    "@angular/core": "~8.2.6",
+    "@angular/forms": "~8.2.6",
+    "@angular/platform-browser": "~8.2.6",
+    "@angular/platform-browser-dynamic": "~8.2.6",
+    "@angular/router": "~8.2.6",
+    "dart-sass": "^1.22.12",
+    "nativescript-angular": "~8.2.1",
+    "nativescript-theme-core": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "prettier-check": "^2.0.0",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.2",
+    "rxjs": "^6.5.3",
     "tns-core-modules": "^6.1.1",
-    "tslint": "^5.19.0",
+    "tslint": "^5.20.0",
     "tslint-no-circular-imports": "^0.7.0",
     "typescript": "~3.5.3",
     "zone.js": "~0.9.1"
