--- a/demo/src/package.json
+++ b/demo/src/package.json
@@ -1,6 +1,8 @@
 {
   "android": {
-    "v8Flags": "--expose_gc"
+    "v8Flags": "--expose_gc",
+    "markingMode": "none"
   },
-  "main": "main.js"
+  "main": "main.js",
+  "profiling2": "timeline"
 }
