--- a/demo/package.json
+++ b/demo/package.json
@@ -7,24 +7,24 @@
   "nativescript": {
     "id": "dk.nota.a11ydemo",
     "tns-ios": {
-      "version": "6.1.0"
+      "version": "6.1.1"
     },
     "tns-android": {
-      "version": "6.1.0"
+      "version": "6.1.2"
     }
   },
   "dependencies": {
-    "@angular/animations": "~8.2.6",
-    "@angular/common": "~8.2.6",
-    "@angular/compiler": "~8.2.6",
-    "@angular/core": "~8.2.6",
-    "@angular/forms": "~8.2.6",
-    "@angular/platform-browser": "~8.2.6",
-    "@angular/platform-browser-dynamic": "~8.2.6",
-    "@angular/router": "~8.2.6",
+    "@angular/animations": "~8.2.9",
+    "@angular/common": "~8.2.9",
+    "@angular/compiler": "~8.2.9",
+    "@angular/core": "~8.2.9",
+    "@angular/forms": "~8.2.9",
+    "@angular/platform-browser": "~8.2.9",
+    "@angular/platform-browser-dynamic": "~8.2.9",
+    "@angular/router": "~8.2.9",
     "@nota/nativescript-accessibility-ext": "file:../src",
     "nativescript-angular": "~8.2.1",
-    "nativescript-theme-core": "~2.0.21",
+    "nativescript-theme-core": "~2.0.23",
     "reflect-metadata": "~0.1.13",
     "rxjs": "^6.5.3",
     "tns-core-modules": "^6.1.1",
@@ -32,11 +32,11 @@
   },
   "devDependencies": {
     "@angular/cli": "8.2.2",
-    "@angular/compiler-cli": "~8.2.6",
-    "@nativescript/schematics": "~0.7.1",
+    "@angular/compiler-cli": "~8.2.9",
+    "@nativescript/schematics": "~0.7.2",
     "@ngtools/webpack": "8.2.0",
     "codelyzer": "^5.1.0",
-    "nativescript-dev-webpack": "^1.2.0",
+    "nativescript-dev-webpack": "~1.2.1",
     "sass": "^1.22.12",
     "sass-loader": "^7.3.1",
     "tslint": "^5.20.0",
