--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@nota/nativescript-accessibility-ext",
-  "version": "6.1.0-alpha.4",
+  "version": "6.1.0-alpha.5",
   "description": "Add support for 'VoiceOver' and 'TalkBack' in NativeScript",
   "scripts": {
     "postinstall": "npm-run-all install:src install:demo",
@@ -45,8 +45,8 @@
   "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
-    "tns-core-modules": "^6.1.1",
-    "tns-platform-declarations": "^6.1.1",
+    "tns-core-modules": "~6.1.1",
+    "tns-platform-declarations": "~6.1.1",
     "typescript": "~3.5.3"
   }
 }
