--- a/demo/package.json
+++ b/demo/package.json
@@ -14,31 +14,31 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "~8.2.10",
-    "@angular/common": "~8.2.10",
-    "@angular/compiler": "~8.2.10",
-    "@angular/core": "~8.2.10",
-    "@angular/forms": "~8.2.10",
-    "@angular/platform-browser": "~8.2.10",
-    "@angular/platform-browser-dynamic": "~8.2.10",
-    "@angular/router": "~8.2.10",
+    "@angular/animations": "~8.2.12",
+    "@angular/common": "~8.2.12",
+    "@angular/compiler": "~8.2.12",
+    "@angular/core": "~8.2.12",
+    "@angular/forms": "~8.2.12",
+    "@angular/platform-browser": "~8.2.12",
+    "@angular/platform-browser-dynamic": "~8.2.12",
+    "@angular/router": "~8.2.12",
     "@nota/nativescript-accessibility-ext": "file:../src",
-    "nativescript-angular": "~8.2.1",
+    "nativescript-angular": "~8.2.2",
     "nativescript-theme-core": "~2.0.24",
     "reflect-metadata": "~0.1.13",
     "rxjs": "^6.5.3",
-    "tns-core-modules": "~6.1.1",
+    "tns-core-modules": "~6.1.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "8.2.2",
-    "@angular/compiler-cli": "~8.2.10",
+    "@angular/cli": "8.3.14",
+    "@angular/compiler-cli": "~8.2.12",
     "@nativescript/schematics": "~0.7.2",
-    "@ngtools/webpack": "8.2.0",
-    "codelyzer": "^5.1.2",
+    "@ngtools/webpack": "8.3.14",
+    "codelyzer": "^5.2.0",
     "nativescript-dev-webpack": "~1.2.1",
-    "sass": "^1.23.0",
-    "sass-loader": "~7.3.1",
+    "sass": "^1.23.1",
+    "sass-loader": "^7.3.1",
     "tslint": "^5.20.0",
     "typescript": "~3.5.3"
   }
