--- a/src/package.json
+++ b/src/package.json
@@ -1,14 +1,14 @@
 {
   "private": true,
   "name": "@nota/nativescript-accessibility-ext",
-  "version": "6.1.0-alpha.5",
+  "version": "6.2.0-alpha.1",
   "description": "Add support for 'VoiceOver' and 'TalkBack' in NativeScript",
   "main": "index.js",
   "typings": "index.d.ts",
   "nativescript": {
     "platforms": {
-      "android": "6.1.0",
-      "ios": "6.1.0"
+      "android": "6.2.0",
+      "ios": "6.2.0"
     },
     "plugin": {
       "nan": true,
@@ -70,24 +70,24 @@
   "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "@angular/common": "~8.2.12",
-    "@angular/compiler": "~8.2.12",
-    "@angular/compiler-cli": "~8.2.12",
-    "@angular/core": "~8.2.12",
-    "@angular/forms": "~8.2.12",
-    "@angular/platform-browser": "~8.2.12",
-    "@angular/platform-browser-dynamic": "~8.2.12",
-    "@angular/router": "~8.2.12",
-    "dart-sass": "^1.23.1",
-    "nativescript-angular": "~8.2.2",
-    "nativescript-theme-core": "^2.0.24",
+    "@angular/common": "~8.2.13",
+    "@angular/compiler": "~8.2.13",
+    "@angular/compiler-cli": "~8.2.13",
+    "@angular/core": "~8.2.13",
+    "@angular/forms": "~8.2.13",
+    "@angular/platform-browser": "~8.2.13",
+    "@angular/platform-browser-dynamic": "~8.2.13",
+    "@angular/router": "~8.2.13",
+    "@nativescript/theme": "^2.2.0",
+    "dart-sass": "^1.23.3",
+    "nativescript-angular": "^8.20.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "prettier-check": "^2.0.0",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
-    "tns-core-modules": "^6.1.2",
-    "tslint": "^5.20.0",
+    "tns-core-modules": "^6.2.0",
+    "tslint": "^5.20.1",
     "tslint-no-circular-imports": "^0.7.0",
     "typescript": "~3.5.3",
     "zone.js": "~0.9.1"
