fix(android): ContentDescription not added if only checked status was set

--- a/demo/package.json
+++ b/demo/package.json
@@ -22,9 +22,9 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "@nativescript/theme": "^2.2.0",
     "@nota/nativescript-accessibility-ext": "file:../src",
     "nativescript-angular": "~8.20.0",
-    "nativescript-theme-core": "~2.0.24",
     "reflect-metadata": "~0.1.13",
     "rxjs": "^6.5.3",
     "tns-core-modules": "~6.2.0",
