feat: PageAnnounce should now give a11y-focus to action-bar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,7 +63,9 @@
     "Stegen",
     "Umtiti",
     "Unscoped",
+    "androidview",
     "androidx",
+    "appcompat",
     "armeabi",
     "assistive",
     "ayfs",
