--- a/src/package.json
+++ b/src/package.json
@@ -1,14 +1,14 @@
 {
   "private": true,
   "name": "@nota/nativescript-accessibility-ext",
-  "version": "6.2.1",
+  "version": "6.4.0-alpha.0",
   "description": "Add support for 'VoiceOver' and 'TalkBack' in NativeScript",
   "main": "index.js",
   "typings": "index.d.ts",
   "nativescript": {
     "platforms": {
-      "android": "6.2.0",
-      "ios": "6.2.0"
+      "android": "6.4.0",
+      "ios": "6.4.0"
     },
     "plugin": {
       "nan": true,
