--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,6 +94,7 @@
     "pathinfo",
     "prettierrc",
     "quotemark",
+    "radiobtn",
     "radiobutton",
     "ruleset",
     "sasswatch",
@@ -103,6 +104,7 @@
     "toplevel",
     "tscwatch",
     "uglifyjs",
+    "weblink",
     "xcode",
     "ydemo"
   ]
