--- a/demo/package.json
+++ b/demo/package.json
@@ -4,42 +4,34 @@
   "description": "NativeScript Application",
   "license": "SEE LICENSE IN <your-license-filename>",
   "version": "0.0.0",
-  "nativescript": {
-    "id": "dk.nota.a11ydemo",
-    "tns-ios": {
-      "version": "6.4.0"
-    },
-    "tns-android": {
-      "version": "6.4.1"
-    }
-  },
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@nativescript/theme": "~2.3.0",
+    "@angular/animations": "^10.0.14",
+    "@angular/common": "^10.0.14",
+    "@angular/compiler": "^10.0.14",
+    "@angular/core": "^10.0.14",
+    "@angular/forms": "^10.0.14",
+    "@angular/platform-browser": "^10.0.14",
+    "@angular/platform-browser-dynamic": "^10.0.14",
+    "@angular/router": "^10.0.14",
+    "@nativescript/angular": "10.0.0",
+    "@nativescript/core": "7.0.0",
+    "@nativescript/theme": "~2.3.3",
     "@nota/nativescript-accessibility-ext": "file:../src",
-    "nativescript-angular": "~8.21.0",
     "reflect-metadata": "~0.1.13",
-    "rxjs": "^6.5.4",
-    "tns-core-modules": "~6.4.0",
-    "zone.js": "~0.9.1"
+    "rxjs": "^6.6.2",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular/cli": "8.3.18",
-    "@angular/compiler-cli": "~8.2.14",
-    "@nativescript/schematics": "~0.7.3",
-    "@ngtools/webpack": "8.2.0",
-    "codelyzer": "^5.2.0",
-    "nativescript-dev-webpack": "~1.5.0",
+    "@angular/cli": "10.0.8",
+    "@angular/compiler-cli": "^10.0.14",
+    "@nativescript/schematics": "~10.0.2",
+    "@nativescript/webpack": "3.0.0",
+    "@ngtools/webpack": "^10.0.8",
+    "codelyzer": "^6.0.0",
     "node-sass": "^4.14.1",
-    "sass": "^1.23.3",
-    "tslint": "^5.20.1",
-    "typescript": "~3.5.3"
-  }
+    "sass": "^1.26.10",
+    "tslint": "^6.1.3",
+    "typescript": "3.9.7"
+  },
+  "main": "main.js"
 }
