--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
   },
   "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
   "devDependencies": {
+    "@nativescript/types-android": "^7.0.2",
+    "@nativescript/types-ios": "^7.0.1",
     "npm-run-all": "^4.1.5",
-    "tns-core-modules": "~6.4.0",
-    "tns-platform-declarations": "~6.4.0",
-    "typescript": "~3.5.3"
+    "typescript": "^3.9.7"
   }
 }
