--- a/src/package.json
+++ b/src/package.json
@@ -70,26 +70,27 @@
   "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@nativescript/theme": "~2.3.0",
+    "@angular/animations": "^10.0.14",
+    "@angular/common": "^10.0.14",
+    "@angular/compiler": "^10.0.14",
+    "@angular/compiler-cli": "^10.0.14",
+    "@angular/core": "^10.0.14",
+    "@angular/forms": "^10.0.14",
+    "@angular/platform-browser": "^10.0.14",
+    "@angular/platform-browser-dynamic": "^10.0.14",
+    "@angular/router": "^10.0.14",
+    "@nativescript/angular": "^10.0.3",
+    "@nativescript/core": "^7.0.0",
+    "@nativescript/theme": "~2.3.3",
     "dart-sass": "~1.25.0",
-    "nativescript-angular": "^8.21.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
+    "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.2",
-    "tns-core-modules": "~6.4.0",
-    "tslint": "^5.20.1",
+    "tslint": "^6.1.3",
     "tslint-no-circular-imports": "^0.7.0",
-    "typescript": "~3.5.3",
-    "zone.js": "~0.9.1"
+    "typescript": "~3.9.7",
+    "zone.js": "~0.10.3"
   },
   "dependencies": {},
   "bootstrapper": "nativescript-plugin-seed"
