--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,46 +1,30 @@
 {
-  "compileOnSave": false,
   "compilerOptions": {
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
-    "baseUrl": ".",
+    "module": "ESNext",
+    "target": "es2015",
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
     "declaration": true,
     "downlevelIteration": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "inlineSourceMap": true,
-    "inlineSources": true,
-    "incremental": true,
-    "lib": [
-      "es6",
-      "dom",
-      "es2015.iterable",
-      "es2017.object"
-    ],
-    "module": "commonjs",
     "noEmitHelpers": true,
-    "noEmitOnError": false,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": false,
-    "noImplicitReturns": true,
-    "noImplicitUseStrict": false,
-    "noLib": false,
-    "noUnusedLocals": true,
-    "pretty": true,
-    "removeComments": true,
+    "noEmitOnError": true,
     "skipLibCheck": true,
-    "target": "es5"
+    "lib": [
+      "es2018", "es2017", "dom", "es6"
+    ],
+    "baseUrl": "."
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "files": [
-    "index.ts"
-  ],
   "include": [
     "ui/**/*.ts",
     "utils/**/*.ts",
     "angular/**/*.ts",
     "references.d.ts"
+  ],
+  "files": [
+    "index.ts"
+  ],
+  "exclude": [
+    "node_modules"
   ]
 }
