chore: fix build and use workspace tools

--- a/apps/demo/tsconfig.json
+++ b/apps/demo/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["src/*"],
-      "@nativescript/*": ["../../packages/*"],
+      "@nota/*": ["../../packages/*"],
       "@demo/shared": ["../../tools/demo/index.ts"]
     }
   }
