--- a/apps/demo-angular/tsconfig.json
+++ b/apps/demo-angular/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["src/*"],
-      "@nativescript/*": ["../../dist/packages/*"],
+      "@nota/*": ["../../dist/packages/*"],
       "@demo/shared": ["../../tools/demo/index.ts"]
     }
   },
