--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "scripts": {
     "setup": "npx rimraf node_modules package-lock.json dist tmp && npm i && ts-patch install",
     "start": "nps",
-    "add": "nx workspace-schematic add-package",
-    "add-angular": "nx workspace-schematic add-angular"
+    "add": "nx g @nativescript/plugin-tools:add-package",
+    "add-angular": "nx g @nativescript/plugin-tools:add-angular",
+    "config": "nx g @nativescript/plugin-tools:config",
+    "publish-packages": "nx g @nativescript/plugin-tools:publish",
+    "sync-packages-with-demos": "nx g @nativescript/plugin-tools:sync-packages-with-demos"
   },
   "private": true,
   "devDependencies": {
@@ -21,6 +24,8 @@
     "@angular/router": "~10.1.0",
     "@nativescript/angular": "~10.1.0",
     "@nativescript/core": "~7.0.0",
+    "@nativescript/plugin-tools": "~1.0.0",
+    "@nativescript/theme": "^2.5.0",
     "@nativescript/types": "~7.0.0",
     "@nativescript/webpack": "~3.0.0",
     "@ngtools/webpack": "~10.1.0",
@@ -70,8 +75,5 @@
     "**/*": [
       "nx format:write --files"
     ]
-  },
-  "dependencies": {
-    "@nativescript/theme": "^2.3.3"
   }
 }
