--- a/tools/demo/tsconfig.json
+++ b/tools/demo/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@nativescript/*": ["../../packages/*"]
+      "@nota/*": ["../../packages/*"]
     }
   }
 }
