--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@nota/nativescript-accessibility-ext",
-  "version": "6.4.2",
+  "version": "6.5.0",
   "description": "Add support for 'VoiceOver' and 'TalkBack' in NativeScript",
   "scripts": {
     "postinstall": "npm-run-all install:src install:demo",
@@ -45,7 +45,7 @@
   "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
   "devDependencies": {
     "npm-run-all": "^4.1.5",
-    "tns-core-modules": "~6.4.0",
+    "tns-core-modules": "^6.5.24",
     "tns-platform-declarations": "~6.4.0",
     "typescript": "~3.5.3"
   }
