--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@nota/nativescript-accessibility-ext",
-  "version": "6.4.3",
+  "version": "6.5.0",
   "description": "Add support for 'VoiceOver' and 'TalkBack' in NativeScript",
   "main": "index.js",
   "typings": "index.d.ts",
@@ -85,12 +85,11 @@
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.2",
-    "tns-core-modules": "~6.4.0",
+    "tns-core-modules": "^6.5.24",
     "tslint": "^5.20.1",
     "tslint-no-circular-imports": "^0.7.0",
     "typescript": "~3.5.3",
     "zone.js": "~0.9.1"
   },
-  "dependencies": {},
   "bootstrapper": "nativescript-plugin-seed"
 }
