working on migration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "[typescript]":{
+  "[typescript]": {
     "editor.formatOnSave": true
   },
   "files.exclude": {
@@ -35,75 +35,78 @@
   "cSpell.words": [
     "Alcácer",
     "Aleix",
-    "Arda",
-    "Bitmask",
-    "Cillessen",
-    "Codegen",
-    "Combobox",
-    "Digne",
-    "Flexbox",
-    "Focusable",
-    "Freiling",
-    "Gomes",
-    "Iniesta",
-    "Jordi",
-    "Mascherano",
-    "Masip",
-    "Mathieu",
-    "Messi",
-    "Morten",
-    "Newable",
-    "Neymar",
-    "Paco",
-    "Rafinha",
-    "Rakitic",
-    "Recycler",
-    "Sergi",
-    "Sjøgren",
-    "Stegen",
-    "Umtiti",
-    "Unscoped",
     "androidview",
     "androidx",
     "appcompat",
+    "Arda",
     "armeabi",
     "assistive",
     "ayfs",
+    "Bitmask",
     "bootstrapper",
+    "Cillessen",
+    "Codegen",
     "codelyzer",
+    "Combobox",
     "compat",
     "ddfreiling",
     "devkit",
     "devtool",
+    "Digne",
     "downlevel",
+    "Flexbox",
+    "Focusable",
     "fontscale",
     "fontscales",
+    "Freiling",
     "globalevents",
     "gmail",
+    "Gomes",
+    "Iniesta",
     "inputmethodservice",
+    "Jordi",
     "mabs",
+    "Mascherano",
+    "Masip",
+    "Mathieu",
+    "Messi",
     "moduleid",
+    "Morten",
     "nativescript",
+    "Newable",
+    "Neymar",
     "ngfactory",
     "ngmodule",
     "ngstyle",
     "ngtools",
     "nospace",
+    "nrwl",
     "nsconfig",
+    "nstudio",
     "oraclejdk",
+    "packagr",
+    "Paco",
     "pathinfo",
     "prettierrc",
     "quotemark",
     "radiobtn",
     "radiobutton",
+    "Rafinha",
+    "Rakitic",
+    "Recycler",
     "ruleset",
     "sasswatch",
     "selectable",
+    "Sergi",
     "sidedrawer",
+    "Sjøgren",
     "softnav",
+    "Stegen",
     "toplevel",
     "tscwatch",
     "uglifyjs",
+    "Umtiti",
+    "Unscoped",
     "weblink",
     "xcode",
     "ydemo"
