--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nativescript/types": "~7.2.0",
     "@nativescript/webpack": "~4.1.0",
     "@ngtools/webpack": "~11.2.1",
+    "@nrwl/cli": "^11.3.1",
     "@nrwl/eslint-plugin-nx": "^11.3.1",
     "@nrwl/jest": "^11.3.1",
     "@nrwl/node": "^11.3.1",
@@ -44,16 +45,14 @@
     "dart-sass": "^1.25.0",
     "dotenv": "~8.2.0",
     "eslint": "~7.20.0",
-    "eslint-config-prettier": "~8.0.0",
+    "eslint-config-prettier": "^8.8.0",
     "husky": "^4.3.0",
     "jest": "~26.4.1",
     "lint-staged": "^10.5.4",
-    "nativescript-permissions": "^1.3.11",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-vue": "~2.8.3",
     "nativescript-vue-template-compiler": "~2.8.3",
     "ng-packagr": "~11.2.4",
-    "node-sass": "^4.12.0",
     "postcss": "^8.2.13",
     "postcss-url": "^10.1.1",
     "prettier": "^2.2.1",
