--- a/apps/demo/tsconfig.json
+++ b/apps/demo/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["src/*"],
-      "@nota/*": ["../../packages/*"],
+      "@nota/nativescript-accessibility-ext": ["../../packages/nativescript-accessibility-ext/index.d.ts"],
       "@demo/shared": ["../../tools/demo/index.ts"]
     }
   }
