--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "husky": "^8.0.0",
     "mkdirp": "^1.0.4",
     "nativescript-permissions": "1.3.11",
+    "nativescript-theme-core": "^1.0.6",
     "nativescript-vue": "~2.9.0",
     "nativescript-vue-template-compiler": "~2.9.0",
     "ng-packagr": "^15.0.0",
@@ -45,8 +46,7 @@
     "simple-plist": "^1.1.0",
     "sprintf-js": "^1.1.1",
     "typescript": "~4.8.0",
-    "vue": "~2.6.12",
-    "zone.js": "~0.11.1"
+    "vue": "~2.6.12"
   },
   "lint-staged": {
     "**/*.{js,ts,scss,json,html}": [
