--- a/package.json
+++ b/package.json
@@ -32,14 +32,12 @@
     "@nativescript/types": "~8.4.0",
     "@nativescript/webpack": "~5.0.5",
     "@ngtools/webpack": "^15.0.0",
+    "@types/fs-extra": "^11.0.1",
     "@types/mkdirp": "^1.0.1",
     "@types/sprintf-js": "^1.1.0",
     "husky": "^8.0.0",
     "mkdirp": "^1.0.4",
-    "nativescript-permissions": "1.3.11",
     "nativescript-theme-core": "^1.0.6",
-    "nativescript-vue": "~2.9.0",
-    "nativescript-vue-template-compiler": "~2.9.0",
     "ng-packagr": "^15.0.0",
     "rxjs": "~7.5.0",
     "shorthash": "0.0.2",
